--- a/academic.css
+++ b/academic.css
@@ -29,6 +29,10 @@ ul ul {
   font-size: 0.9em;
 }
 
+section.video{
+    text-align: center;
+}
+
 section.lead h1 {
   color: #ffffff;
   text-align:  center;
