--- a/academic.css
+++ b/academic.css
@@ -159,3 +159,33 @@ img[alt~="center"] {
 code {
   font-family: 'Source Code Pro', monospace;
 }
+
+
+.split {
+    display: table;
+    width: 100%;
+  }
+
+.split-item {
+display: table-cell;
+padding: 0px;
+width: 60%;
+}
+
+.split-left {
+position: relative;
+}
+
+.split-left__inner {
+height: 100%;
+position: fixed;
+width: 50%;
+}
+
+.split-right {
+position: relative;
+}
+
+.split-right__inner {
+height: 420px;
+}
