--- a/academic.css
+++ b/academic.css
@@ -13,7 +13,7 @@
 section {
   background-image: none;
   color: #eeeeee;
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: '源ノ角ゴシック Code JP';
   padding-top: 90px;
   padding-left: 40px;
   padding-right: 40px;
@@ -21,10 +21,16 @@ section {
 
 section h1 {
     font-size: 72px;
+    -webkit-text-stroke: 2px #8d4c4c;
 }
-
-section h4 {
+section h2 {
+    font-size: 48px;
+}
+section h3 {
     font-size: 32px;
+}
+section h4 {
+    font-size: 28px;
 }
 
 /* https://github.com/marp-team/marpit/issues/271 */
@@ -154,7 +160,7 @@ html,body {
 
 
 header {
-  background-color: #800000;
+  background-color: #611313;
   color: #fff;
   font-family: 'Noto Sans JP', sans-serif;
   font-size: 1em;
